# sentinel

./: .actrc  .gitignore  .npmrc  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.js  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  test-docker-integration.sh  test-docker-start-stop.sh  test-logger.sh  test-pty-system.sh  test-pty.html  verify-pty-working.sh  vite.config.js  vitest.config.js  vitest.config.ts
.github/: ACT_TESTING.md  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  pr-checks.yml  release.yml
.internal/phase4/: 4-research-notes.md  4A-1_PROCESS_LOG_VIEWER.md  4B-1_PROCESS_MANAGEMENT.md  4C-1_SPLIT_TERMINAL_VIEW.md  4D-1_LOG_AGGREGATION.md  README.md
Formula/: sentinel.rb
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/src/commands/: add.rs  init.rs  list.rs  logs.rs  mod.rs  remove.rs  restart.rs  start.rs  status.rs  stop.rs
cli/tests/: cli_tests.rs
docs/: ARCHITECTURE.md  FAQ.md  PHASE3_IMPLEMENTATION.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  RESEARCH.md  ROADMAP.md  TESTING.md  WORKFLOW_TESTING.md  claude.md
examples/: README.md  full-stack.yaml  microservices.yaml  simple.yaml
examples/mern/: sentinel.yaml
examples/nextjs/: sentinel.yaml
examples/python-fastapi/: sentinel.yaml
scripts/: build.sh  generate-icon.mjs  quick-test.sh  release.sh  setup-git-hooks.sh  test-workflows.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: benchmarks.rs.disabled
src-tauri/icons/: icon.icns
src-tauri/src/: App.test.js  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: external_logs.rs  managed_process.rs  mod.rs  process.rs  pty.rs  system.rs
src-tauri/src/core/: config.rs  external_process_monitor.rs  framework_detector.rs  log_buffer.rs  metrics_buffer.rs  mod.rs  process_config.rs  process_control.rs  process_manager.rs  pty_process_manager.rs  state_manager.rs  system_monitor.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/connections/: mod.rs  tracker.rs  types.rs
src-tauri/src/features/docker/: mod.rs  monitor.rs  types.rs
src-tauri/src/features/network_monitor/: buffer.rs  collector.rs  mod.rs  types.rs
src-tauri/src/features/port_discovery/: mod.rs  parser.rs  scanner.rs  types.rs
src-tauri/src/features/service_detection/: detector.rs  mod.rs  patterns.rs  tests.rs
src-tauri/src/models/: config.rs  mod.rs  process.rs  state.rs  system.rs
src-tauri/tests/: security_tests.rs
tests/: integration_test.rs
(+78 files in other folders)
