[package]
name = "sentinel-cli"
version = "0.1.0-alpha"
description = "CLI for Sentinel - Your Development Guardian"
authors = ["GLINCKER (A GLINR Product)"]
license = "MIT"
repository = "https://github.com/GLINCKER/sentinel"
homepage = "https://glincker.com/sentinel"
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
# Core sentinel library
sentinel = { path = "../src-tauri" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "color", "suggestions"] }

# Terminal colors and formatting
colored = "2.1"
console = "0.15"

# Progress bars and spinners
indicatif = "0.17"

# Pretty tables
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# File system
dirs = "5.0"

# Date/time
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
